# ktbs56a

./: CMakeLists.txt
cmake/: clang_complete.in
fpga/ktbs56a/: main.ucf  main.v  spi_slave.v
fpga/src/: main.sv  spi_slave.v
inc/: FreeRTOSConfig.h  adc_spi_driver.hpp  base_driver.hpp  buttons_driver.hpp  dut_loads_driver.hpp  events_id.hpp  events_worker.hpp  fpga_driver.hpp  gp_timers_driver.hpp  leds_driver.hpp  shell.hpp  term.hpp  usart_driver.hpp
ldscripts/: stm32f103rg.ld
src/: adc_spi_driver.cpp  applications.cpp  buttons_driver.cpp  drivers.cpp  dut_loads_driver.cpp  events_worker.cpp  fpga_driver.cpp  gp_timers_driver.cpp  leds_driver.cpp  main.cpp  port.c  shell.cpp  test_apps.cpp  usart_driver.cpp
system/inc/: property.hpp  signal.hpp  startup.hpp
system/src/: startup.cpp
